Add OAuth implementation and refactor some code

--- a/CodeCraftersAPI/appsettings.json
+++ b/CodeCraftersAPI/appsettings.json
@@ -1,9 +1,29 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+
+    "JwtSettings": {
+        "SecretKey": "your-very-secure-secret-key-here",
+        "ExpiryMinutes": 60
+    },
+
+    "OAuth": {
+        "Google": {
+            "ClientId": "your-google-client-id",
+            "ClientSecret": "your-google-client-secret",
+            "AuthUrl": "https://accounts.google.com/o/oauth2/auth",
+            "TokenUrl": "https://oauth2.googleapis.com/token",
+            "UserInfoUrl": "https://www.googleapis.com/oauth2/v2/userinfo",
+            "RedirectUri": "https://yourapp.com/api/auth/google/callback"
+        }
+    },
+
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=auth.db"
     }
-  },
-  "AllowedHosts": "*"
 }
