--- a/CodeCraftersAPI/appsettings.json
+++ b/CodeCraftersAPI/appsettings.json
@@ -24,6 +24,11 @@
     },
 
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=auth.db"
+        "DefaultConnection": "Data Source=./data.db"
+    },
+
+    "DbSettings": {
+        "DatabaseFileName": "data.db",
+        "DatabaseDirectory": "./"
     }
 }
