Wrong directory location fix

--- a/CodeCrafters.Test/CodeCrafters.Test.csproj
+++ b/CodeCrafters.Test/CodeCrafters.Test.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Folder Include="Domain\" />
     <Folder Include="Infrastructure\" />
+    <Folder Include="UI\" />
   </ItemGroup>
 
   <ItemGroup>
