--- a/CodeCraftersAPI/Properties/launchSettings.json
+++ b/CodeCraftersAPI/Properties/launchSettings.json
@@ -27,11 +27,12 @@
       "useSSL": true
     },
     "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "commandName": "IISExpress",
+        "launchBrowser": true,
+        "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Development"
+        },
+        "launchUrl": "swagger"
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json",
